force-app/main/default/objects/PEP_Patient_Address__c/PEP_Patient_Address__c.object-meta.xml
<CustomObject>
    <label>Patient Address</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Patient Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>