force-app/main/default/objects/PEP_Patient_Address__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <referenceTo>PEP_Patient__c</referenceTo>
    <relationshipLabel>Patient Addresses</relationshipLabel>
    <relationshipName>Patient_Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>